# SPIRV-Interpreter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  usage-help.md
.github/workflows/: ci.yml  cmake-multi-platform.yml
examples/64bit/: in.yaml  int64.frag  int64.spv  out.yaml
examples/atomics/: atomics.comp.glsl  comp.spv  in.yaml  out.yaml
examples/basic-tesc/: basic.tesc  in.yaml  out.yaml  tesc.spv
examples/bitfield/: comp.spv  in.yaml  out.yaml
examples/cond-particle/: comp.spv  comp.spvasm  cond-particle.comp  in.toml  in.yaml  out.toml  out.yaml
examples/coop-matrix/arg-and-return/: comp.spv  func.comp.glsl  in.yaml  out.yaml
examples/coop-matrix/array/: array.comp.glsl  comp.spv  in.yaml  out.yaml
examples/coop-matrix/difficult-init/: comp.spv  diff-init.comp.glsl  in.yaml  out.yaml
examples/coop-matrix/iteration/: comp.spv  in.yaml  iteration.comp.glsl  out.yaml
examples/coop-matrix/load-store/: comp.spv  in.yaml  out.yaml  simple.comp.glsl
examples/coop-matrix/matmul/: comp.spv  in.yaml  matmul.comp.glsl  out.yaml
examples/coop-matrix/matmul2/: comp.spv  in.yaml  matmul.comp.glsl  out.yaml
examples/coop-matrix/simple-element/: comp.spv  element.comp.glsl  in.json  out.json
examples/debug/: debug-prints.frag  frag.spv  frag.spvasm  print.txt
examples/descriptors/: descriptors.frag.glsl  in.yaml  out.yaml
examples/extensions/nonsemantic/: comp.spv  in.yaml  invoc.comp.glsl  (+2 more)
examples/extra-nop/: comp.spv  in.yaml  modf.comp  out.yaml
examples/float-precision/: in.yaml
examples/func-dot/: frag.spv  frag.spvasm  func-dot.frag  in.json  in0.json  in1.json  out0.json  out1.json
examples/group-quad/: quad.comp.spv
examples/image-simple/: frag.spv  image-simple.frag  in.yaml  in2.yaml  out1.json  out2.yaml
examples/math-multi/: comp.spv  in.yaml  math-multi.comp  out.yaml
examples/matrix-ops/: in.yaml  matrix-ops.vert
examples/multi-tesc/: in.yaml  multi.tesc  out.yaml  tesc.spv
examples/nameless/: in.yaml  nameless.spvasm  out.yaml  vert.spv
examples/norm-arith/: in.toml  in.yaml  out.toml  out.yaml  vert.spv  vert.spvasm
examples/opencl-simple/: array-addition.cl  comp.spv  in.yaml  out.yaml
examples/procedural-ocean/: in.yaml  ocean.frag
examples/push-matrix/: in.json  in.yaml  matrix.vert  out.yaml  vert.spv  vert.spvasm
examples/rayquery/: in.json  out.json  rayquery.spv  shader.frag
examples/raytracing/: in.json  in.yaml  out.json  out.yaml  ray_generation.rgen  sphere_in.yaml  sphere_info-in.json
examples/raytracing-callable/: in.json
examples/raytracing-rahit/: in0.json  in1.json  rahit.spv  shader.rahit
examples/raytracing-rchit/: in.json  out.json  rchit.spv  shader.rchit
examples/raytracing-rgen/: in0.json  in1.json  in10.json  in11.json  in12.json  in13.json  in14.json  in15.json  in16.json  in17.json  in18.json  in19.json  in2.json  in20.json  in3.json  in4.json  in5.json  in6.json  in7.json  in8.json  in9.json  out1.json  out11.json  out13.json  out15.json  out17.json  out8.json  rgen.spv  scene.txt  shader.rgen  test_cases.txt
examples/raytracing-rint/: in0.json  in1.json  out0.json  out1.json  rint.spv  scene.txt  shader.rint
examples/raytracing-rmiss/: rmiss.spv
examples/recursive/: in.yaml  out.yaml  recursive.c  recursive.glsl  recursive.spv
examples/simple-frag/: frag.spv  frag.spvasm  in.toml  in.yaml  out.toml  out.yaml  simple.frag
examples/spec-const/: in1.json  out0.yaml  out1.json  vert.spv
examples/tricky-funcs/: in.yaml  out.yaml  tricky.spv  tricky.spvasm
examples/trivial-frag/: frag.spv  frag.spvasm  in.yaml  out.toml  out.yaml  trivial.frag
examples/undef-legal/: frag.spv  in0.yaml  in1.yaml  out0.yaml  out1.yaml  undef-legal.frag
examples/var-ptr/: LICENSE  in.yaml  var-ptr.spvasm
src/: .clang-format  CMakeLists.txt  foo.cxx  main.cpp  toml.cxx  util.cxx  utils.cxx  value.cxx
src/format/: json.cpp  json.cxx  json.hpp  parse.cpp  parse.cxx  parse.hpp  toml.cxx  yaml.cpp  yaml.cxx  yaml.hpp
src/front/: argparse.cpp  argparse.cxx  argparse.hpp  console.cpp  console.cxx  console.hpp  debug.cpp  debug.cxx  debug.hpp
src/frontend/: console.cxx  debug.cxx
src/spv/: data.cxx  frame.cpp  frame.cxx  frame.hpp  inst-exec.cpp  inst-list.cxx  inst-list.hpp  inst-make.cpp  inst-read.cpp  inst-result.cpp  instruction.cpp  instruction.cxx  instruction.hpp  instructions.cxx  program.cpp  program.cxx  program.hpp  ray-flags.cxx  ray-flags.hpp  ray-substage.cpp  ray-substage.cxx  ray-substage.hpp  token.cxx  token.hpp  tokens.cxx  var-compare.cxx  var-compare.hpp
src/spv/data/: data.cpp  data.cxx  data.hpp  manager.cpp  manager.h  manager.hpp
src/util/: array-math.cpp  array-math.cxx  array-math.hpp  compare.cpp  compare.cxx  compare.hpp  fpconvert.cpp  fpconvert.cxx  fpconvert.hpp  geom-math.cpp  geom-math.cxx  geom-math.hpp  intersection.cxx  spirv.hpp  stb-impl.cpp  string.cpp  string.cxx  string.hpp  ternary.cxx  ternary.hpp  trie.cpp  trie.hpp
src/values/: accel-struct.cxx  acceleration-structure.cxx  aggregate.cpp  aggregate.cxx  aggregate.hpp  coop-matrix.cxx  coop-matrix.hpp  coopMatrix.cxx  image.cpp  image.cxx  image.hpp  pointer.cxx  pointer.hpp  primitive.cpp  primitive.cxx  primitive.hpp  ray-query.cxx  sampled-img.cxx  sampled-img.hpp  sampler.cxx  sampler.hpp  statics.cpp  statics.cxx  statics.hpp  string.cxx  string.hpp  type.cpp  type.cxx  type.hpp  valuable.hpp  value.cxx  value.hpp
src/values/ray-trace/: accel-struct.cxx  ray-query.cxx  shader-binding-table.cpp  shader-binding-table.hpp
src/values/raytrace/: accel-manager.cxx  accel-struct.cpp  accel-struct.cxx  accel-struct.hpp  node.cpp  node.cxx  node.hpp  ray-flags.cxx  ray-query.cxx  ray-query.hpp  shader-binding-table.cpp  shader-binding-table.cxx  shader-binding-table.hpp  trace.cpp  trace.cxx  trace.hpp
test/: CMakeLists.txt  example-runner.py  example_runner.py  opcode_analyze.py  passlist.txt  util-test.cpp
test/format/: json-test.cpp  parse-test.cpp  yaml-test.cpp
test/spv/: instruction-test.cpp
test/util/: compare-test.cpp  string-test.cpp  trie-test.cpp
(+250 files in other folders)
